--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "redis": "^4.2.0"
   },
   "scripts": {
-    "start": "node -r dotenv/config src/app.js",
+    "start": "node  src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -r dotenv/config src/app.js"
   },
