--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "randomstring": "^1.3.0",
     "redis": "^4.2.0",
     "uuid": "^9.0.1"
   },
