--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "firebase": "^10.8.0",
     "firebase-admin": "^11.0.1",
     "helmet": "^5.1.1",
     "http-methods-constants": "^1.1.0",
